fix: set text-align:right on numeric input
CORE-309

--- a/src/components/molecules/inputs/mg-input.scss
+++ b/src/components/molecules/inputs/mg-input.scss
@@ -36,6 +36,10 @@
     }
   }
 
+  &.mg-input--numeric input {
+    text-align: right;
+  }
+
   &__title {
     display: flex;
     align-items: baseline;
